# RlVAE

./: .gitignore  CONTRIBUTING.md  INTEGRATION_SUMMARY.md  LICENSE  MODULARIZATION_SUMMARY.md  Makefile  README.md  README_STREAMLIT_APP.md  README_STREAMLIT_INTEGRATION.md  REPOSITORY_REORGANIZATION_COMPLETE.md  WEEKEND_EXPERIMENT_PLAN.md  app.py  config.py  pyproject.toml  requirements.txt  run_clean_training.py  run_clean_training_modular.py  run_experiment.py  run_quick_test.sh  run_training.py  run_weekend_experiments.sh  setup.py  setup_experiment_framework.py  test_hybrid_model.py  test_modular_components.py  test_modular_visualizations.py
.cursor/: environment.json  project_prompt.md
app/: __init__.py
app/backend/: __init__.py  experiment_runner.py  model_manager.py  training_manager.py
app/components/: __init__.py  sidebar.py
app/pages/: __init__.py  experiment_manager.py  latent_exploration.py  model_comparison.py  model_inference.py  overview.py  visualization_gallery.py
app/utils/: __init__.py  session_state.py
conf/: config.yaml
conf/data/: cyclic_sprites.yaml
conf/experiment/: comparison_study.yaml  hyperparameter_sweep.yaml  single_run.yaml
conf/model/: cnn_rlvae.yaml  hybrid_rlvae.yaml  mlp_rlvae.yaml  resnet_rlvae.yaml  riemannian_flow_vae.yaml  vanilla_vae.yaml
conf/training/: default.yaml  full_data.yaml  quick.yaml
conf/visualization/: full.yaml  minimal.yaml  standard.yaml
data/: README.md
data/pretrained/: metric.pt  metric_T0.7_scaled.pt
docs/: EXPERIMENT_SCRIPTS_README.md  GITHUB_READY_CHECKLIST.md  MODULARIZATION_ROADMAP.md  MODULARIZATION_SUMMARY.md  MODULAR_TRAINING_GUIDE.md  MODULAR_VISUALIZATION_GUIDE.md  README_EXPERIMENTAL_FRAMEWORK.md  REPOSITORY_CLEANUP_SUMMARY.md  RIEMANNIAN_FLOW_VAE_ANALYSIS.md  TRAINING_GUIDE.md  installation.md
docs/guides/: CLEAN_TRAINING_GUIDE.md
sample_configs/: modular_rlvae_example.yaml
scripts/: cleanup_training_files.py  create_identity_metric_temp_0_7.py  extract_cyclic_sequences.py  monitor_experiments.sh  run_manyseq.sbatch  run_quick_test.sh  run_weekend_experiments.sh  train_and_extract_vanilla_vae.py
src/data/: cyclic_dataset.py
src/lib/: setup.py
src/lib/scripts/: fid.py  gpvae.py  lvae_iaf.py  utils.py
src/lib/src/pythae/models/: __init__.py
src/models/: __init__.py  hybrid_rlvae.py  modular_rlvae.py  riemannian_flow_vae.py
src/models/components/: __init__.py  decoder_manager.py  encoder_manager.py  flow_manager.py  loss_manager.py  metric_loader.py  metric_tensor.py
src/models/samplers/: __init__.py  base_sampler.py  hmc_sampler.py  rhvae_sampler.py  riemannian_sampler.py
src/rlvae.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/training/: lightning_trainer.py  train_cyclic_loop_comparison.py  train_with_modular_visualizations.py
src/training/wandb/: latest-run
src/visualizations/: __init__.py  base.py  basic.py  flow_analysis.py  interactive.py  manager.py  manifold.py
tests/: test_setup.py
wandb/: latest-run
wandb/offline-run-20250626_145548-xlmc82se/: run-xlmc82se.wandb
(+57 files in other folders)
